@@ -14,6 +14,12 @@ class TrustCommerceTest < Test::Unit::TestCase
     @amount = 100
     @check = check
     @credit_card = credit_card('4111111111111111')
+
+    @options_with_custom_fields = {
+      custom_fields: {
+        'customfield1' => 'test1'
+      }
+    }
   end
 
   def test_successful_purchase
@@ -41,6 +47,22 @@ class TrustCommerceTest < Test::Unit::TestCase
     end.respond_with(successful_purchase_response)
   end
 
+  def test_succesful_purchase_with_custom_fields
+    stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_succesful_authorize_with_custom_fields
+    stub_comms do
+      @gateway.authorize(@amount, @check, @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_authorize_response)
+  end
+
   def test_successful_void_from_purchase
     stub_comms do
       @gateway.void('1235|sale')
@@ -55,6 +77,46 @@ class TrustCommerceTest < Test::Unit::TestCase
     end.check_request do |endpoint, data, headers|
       assert_match(%r{action=reversal}, data)
     end.respond_with(successful_void_response)
+  end
+
+  def test_succesful_capture_with_custom_fields
+    stub_comms do
+      @gateway.capture(@amount, 'auth', @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_capture_response)
+  end
+
+  def test_succesful_refund_with_custom_fields
+    stub_comms do
+      @gateway.refund(@amount, 'auth|100', @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_refund_response)
+  end
+
+  def test_succesful_void_with_custom_fields
+    stub_comms do
+      @gateway.void('1235|sale', @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_void_response)
+  end
+
+  def test_succesful_store_with_custom_fields
+    stub_comms do
+      @gateway.store(@credit_card, @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_store_response)
+  end
+
+  def test_succesful_unstore_with_custom_fields
+    stub_comms do
+      @gateway.unstore('test', @options_with_custom_fields)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{customfield1=test1}, data)
+    end.respond_with(successful_unstore_response)
   end
 
   def test_amount_style
@@ -103,12 +165,29 @@ class TrustCommerceTest < Test::Unit::TestCase
 
   private
 
+  def successful_authorize_response
+    <<-RESPONSE
+authcode=123456
+transid=026-0193338367,
+status=approved
+avs=Y
+cvv=M
+    RESPONSE
+  end
+
   def successful_purchase_response
     <<-RESPONSE
 transid=025-0007423614
 status=approved
 avs=Y
 cvv=P
+    RESPONSE
+  end
+
+  def successful_capture_response
+    <<-RESPONSE
+transid=026-0193338993
+status=accepted
     RESPONSE
   end
 
@@ -125,6 +204,30 @@ cvv=N
     <<-RESPONSE
 transid=025-0007423828
 status=accpeted
+    RESPONSE
+  end
+
+  def successful_refund_response
+    <<-RESPONSE
+transid=026-0193345407
+status=accepted
+    RESPONSE
+  end
+
+  def successful_store_response
+    <<-RESPONSE
+transid=026-0193346109
+status=approved,
+cvv=M,
+avs=0
+billingid=Q5T7PT
+    RESPONSE
+  end
+
+  def successful_unstore_response
+    <<-RESPONSE
+transid=026-0193346231
+status=rejected
     RESPONSE
   end
 
